[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-linker"
version = "1.0.0"
description = "Fotoğraflardan GPS bilgilerini çıkarır ve harita linkleri oluşturur"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adınız", email = "email@adresiniz.com"}
]
keywords = ["gps", "exif", "geotagging", "maps", "coordinates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = []

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "mypy"]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/kullaniciadınız/gps-linker"
Documentation = "https://github.com/kullaniciadınız/gps-linker#readme"
Repository = "https://github.com/kullaniciadınız/gps-linker"
Issues = "https://github.com/kullaniciadınız/gps-linker/issues"

[project.scripts]
gps_linker = "gps_linker:main"
gps-linker = "gps_linker:main"

[tool.setuptools]
py-modules = ["gps_linker"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

